base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce-backend

  template:
    metadata:
      labels:
        app: ecommerce-backend

    spec:
      containers:
        - name: ecommerce-backend
          image: 303164492950.dkr.ecr.ap-south-1.amazonaws.com/ecommerce-devops-backend:PLACEHOLDER

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
