base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
spec:
  type: ClusterIP

  selector:
    app: ecommerce-backend

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
